<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="31dp"
        android:text="@string/TitleText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF909090" />

    <Spinner
        android:id="@+id/sourceSpinner"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:drawSelectorOnTop="true"
        android:prompt="@string/prompt2" />

    <TextView
        android:id="@+id/sourceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleText"
        android:layout_alignTop="@+id/sourceSpinner"
        android:layout_marginLeft="10dp"
        android:text="@string/SourceText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF909090" />
   
    <TextView
        android:id="@+id/destinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sourceText"
        android:layout_below="@+id/sourceSpinner"
        android:layout_marginTop="42dp"
        android:text="@string/DestinText"
        android:textColor="#FF909090"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/destinSpinner"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_alignBottom="@+id/destinText"
        android:layout_alignLeft="@+id/sourceSpinner"
        android:drawSelectorOnTop="true"
        android:prompt="@string/prompt1" />

    <Button
        android:id="@+id/busSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/destinSpinner"
        android:layout_centerVertical="true"
        android:text="@string/bussearch"
        android:onClick="onClick" 
        android:textColor="#FF909090"
        android:background="@android:color/transparent"/>

        
</RelativeLayout>