<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">
 
 	<TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="31dp"
        android:text="@string/TitleText"
        android:textColor="#FF909090"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	
<LinearLayout  
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	
    <TextView
        android:id="@+id/destinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/SourceText"
        android:textColor="#FF909090"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/destinSpinner"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginLeft="70dp"
        android:drawSelectorOnTop="true"
        android:prompt="@string/prompt1" />

	</LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <RadioButton
                android:id="@+id/upRadioButton"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/upRadio"
                android:checked="true"
                android:textColor="#FF909090" />

            <RadioButton
                android:id="@+id/downRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/downRadio"
                android:textColor="#FF909090" />

        </RadioGroup>
    </LinearLayout>

<Button
    android:id="@+id/busSearch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:onClick="onClick"
    android:text="@string/bussearch" 
    android:textColor="#FF909090"
    android:background="@android:color/transparent">
</Button>
 
</LinearLayout>